--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-navbar color="primary">
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
     <ion-title>
       Shopping List
     </ion-title>
@@ -15,7 +18,10 @@
     </ion-col>
     <ion-col>
       <button ion-button (click)="addItem()">Add!</button>
+      <button ion-button (click)="clearList()">Clear List</button>
+
     </ion-col>
+
   </ion-row>
 
   <ion-list>
