--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -34,4 +34,8 @@
       </ion-item-options>
     </ion-item-sliding>
   </ion-list>
+
+  <button ion-button (click)="addToPantry()">Add to Pantry</button>
+
+
 </ion-content>
