--- a/src/pages/pantry/pantry.html
+++ b/src/pages/pantry/pantry.html
@@ -6,7 +6,10 @@
 -->
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="primary">
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
     <ion-title>pantry</ion-title>
   </ion-navbar>
 
