--- a/src/pages/recipes/recipes.html
+++ b/src/pages/recipes/recipes.html
@@ -18,4 +18,11 @@
 
 <ion-content padding>
 
+  <ion-list>
+    <ion-item *ngFor="let data of recipeData">
+
+      <img data-src="{{data.image}}">
+    </ion-item>
+</ion-list>
+
 </ion-content>
