--- a/src/pages/pantry/pantry.html
+++ b/src/pages/pantry/pantry.html
@@ -1,7 +1,5 @@
 <!--
   Generated template for the PantryPage page.
-
-
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
@@ -29,5 +27,15 @@
       </ion-item-options>
     </ion-item-sliding>
   </ion-list>
+
+
+  <ion-item>
+  <ion-select multiple="true" [(ngModel)]="selected">
+        <ion-option *ngFor="let items of pantryItems | async">
+          {{ items.$value }}
+  </ion-option>
+  </ion-select>
+  <ion-item>
+
 
 </ion-content>
