--- a/src/pages/pantry/pantry.html
+++ b/src/pages/pantry/pantry.html
@@ -18,7 +18,8 @@
 <ion-content padding>
 
   <ion-list>
-    <button ion-item *ngFor="let item of pantryItems  | async" (click)="add(item.$value)">
+    <button ion-item *ngFor="let item of pantryItems  | async; let idx = index" (click)="add(item.$value)"
+    [class.selected]="idx === currentSelected">
       {{ item.$value }}
 
 </button>
