--- a/src/pages/recipes/recipes.html
+++ b/src/pages/recipes/recipes.html
@@ -19,10 +19,19 @@
 <ion-content padding>
 
   <ion-list>
-    <ion-item *ngFor="let data of recipeData">
+    <ion-card *ngFor="let data of recipeData">
 
       <img data-src="{{data.image}}">
-    </ion-item>
+      <ion-card-content>
+   <ion-card-title>
+     {{data.title}}
+     </ion-card-title>
+   <p>
+     The most popular industrial group ever, and largely
+     responsible for bringing the music to a mass audience.
+   </p>
+ </ion-card-content>
+    </ion-card>
 </ion-list>
 
 </ion-content>
