--- a/src/pages/recipes/recipes.html
+++ b/src/pages/recipes/recipes.html
@@ -27,9 +27,7 @@
      {{data.title}}
      </ion-card-title>
    <p>
-     The most popular industrial group ever, and largely
-     responsible for bringing the music to a mass audience.
-   </p>
+<button ion-button round outline (click)="fetchRecipe({data.id})">Click here for recipes</button>   </p>
  </ion-card-content>
     </ion-card>
 </ion-list>
