--- a/src/pages/recipes/recipes.html
+++ b/src/pages/recipes/recipes.html
@@ -27,7 +27,7 @@
      {{data.title}}
      </ion-card-title>
    <p>
-<button ion-button round outline (click)="fetchRecipe({data.id})">Click here for recipes</button>   </p>
+     <button ion-button round outline (click)="fetchRecipe(data)">Click here for recipes</button>   </p>
  </ion-card-content>
     </ion-card>
 </ion-list>
