--- a/src/pages/recipe-details/recipe-details.html
+++ b/src/pages/recipe-details/recipe-details.html
@@ -15,4 +15,12 @@
 
 <ion-content padding>
 
+  <ion-list>
+    <ion-item *ngFor="let data of recipeSteps">
+
+     {{data.steps}}
+</ion-item>
+  </ion-list>
+
+
 </ion-content>
