--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,8 @@
 <div id="custom-overlay" [style.display]="splash ? 'flex': 'none'">
   <div class="flb">
     <div class="Aligner-item Aligner-item--top"></div>
-    <img src="assets/logo.svg">
+    <!--<img src="assets/logo.svg"> -->
+    An Ionic Recipe App
     <div class="Aligner-item Aligner-item--bottom"></div>
   </div>
 </div>
